feat(mcp): add user query knowledge entity and semantic embedding rebuild functionality